# stn_segmentation

./: .gitmodules  10p_analyse_result_overlap_loso.py  1_brain_surface_extract.sh  2_linear_registration.sh  3_WM_SEG.sh  4_intensity_normalisation.sh  5p_generate_meshes.sh  6p_calculate_overlap.py  7p_calculate_norm_intensities.py  8p_construct_constraints.py  9p_fit.py  LPS_2_RAS.sh  README.md  anal_cluster_analysis.py  bfc_h.sh  c_test.py  calculate_image_overlap.py  clear_labels.py  clear_labels.sh  collect_all.py  folder_to_acpc.sh  generate_meshes_from_atlas.py  lps_2_ras.py  master_script.sh  new_data_to_ac_pc.py  new_data_to_ac_pc.sh  nrrd_2_nifty.py  requirements.txt  requirenments.txt  robust_intesity_normalisation.py  run_all_loso.py  run_train_test.sh  setup.py  to_ac_pc.py  vtk_test.py  wm_mask_slab.py
bayessian_appearance/: distributions.py  fitting.py  mesh.py  nifti_mask.py  point_distribution.py  settings.py  utils.py  vt_image.py
bayessian_segmentation_cpp/: CMakeLists.txt  Surface.cpp  Surface.h  main.cpp  pybind_test.cpp
bayessian_segmentation_cpp/py_wrappers/: pyNiftiImage.cpp  pyNiftiImage.h  pySurface.cpp  pySurface.h
bayessian_segmentation_cpp/segmentation/: NiftiImage.cpp  NiftiImage.h  Point.cpp  Point.h  Surface.cpp  Surface.h  triangleintersects.h
bayessian_segmentation_cpp/utils/: CLIParser.cpp  CLIParser.h
matlab_utils/: plot_mesh_clusters.m  plot_mesh_electrodes.m  plot_mesh_electrodes_2.m  read_obj.m
scripts/: 10p_analyse_result_overlap_loso.py  11p_mer_data_preprocess.py  12p_train_probabilities.py  2_linear_registration.sh  3_WM_SEG.sh  4_intensity_normalisation.sh  5p_generate_meshes.sh  6p_calculate_overlap.py  7p_calculate_norm_intensities.py  8p_construct_constraints.py  clear_labels.py  compute_mesh_volume_stat.py  folder_to_acpc.sh  generate_meshes_from_atlas.py  generate_multiple_stat_image.py  lps_2_ras.py  master_script.sh  meshes_2_T1_space.sh  meshes_2_t1_space.py  run_all_loso.py  run_train_test.sh  statistics_electrode_position.py  test_py_coords.py  test_py_coords_new.py  test_transformation_error.py  wm_mask_slab.py
utils/: LPS_2_RAS.sh  calc_surg_coords.sh  calc_surg_coords_new.sh  cp_images_2_fcsv.sh  leave_fcsv_only.sh
